[tool.poetry]
name = "agentic-oem-predictive-maintenance"
version = "0.1.0"
description = "Multi-Agent System"
requires-python = ">=3.10,<4.0"
dependencies = [
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.83",
    "langchain-groq>=0.3.8",
    "langgraph>=0.6.11",
    "typing-extensions>=4.15.0",
]
